# SPINE

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  SETUP_SUMMARY.md  docker-compose.yml  pyproject.toml
.cursor/rules/: dto.mdc  ground-rules.mdc  thesis-documentation.mdc
.github/: COMMIT_CONVENTION.md  CONTRIBUTING.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
agents/: __init__.py  base.py  broker.py
agents/buildings/: building.py  building_agent.py
agents/transports/: __init__.py  base.py  truck.py
core/: __init__.py  fsm.py  ids.py  messages.py  types.py
core/buildings/: __init__.py  base.py  gas_station.py  occupancy.py  parking.py  site.py
core/delivery/: __init__.py  task.py
docs/: SUMMARY.md  api-reference.md  diagram-guide-backend-architecture.md  glossary.md  index.md  postman-quick-reference.md
docs/modules/: docker.md
docs/modules/agents/: base.md  broker.md
docs/modules/agents/buildings/: building-agent.md  building.md
docs/modules/agents/transports/: base.md  truck.md
docs/modules/core/: fsm.md  messages.md  types.md
docs/modules/core/buildings/: base.md  gas-station.md  occupancy.md  parking.md  site.md
docs/modules/core/delivery/: task.md
docs/modules/tests/agents/: test-truck.md
docs/modules/world/: generation.md  world.md
scripts/: validate-commit.sh
tests/: __init__.py
tests/agents/: test_truck.py
tests/core/: test_fsm.py  test_gas_station.py  test_ids.py  test_package.py  test_site.py  test_site_serialization.py
tests/world/: test_action_parser.py  test_agent_action_handler.py  test_building_action_handler.py  test_generator.py  test_graph_graphml.py  test_map_action_handler.py  test_map_manager.py  test_navigator_optimized.py  test_node_building_types.py  test_routing_criteria.py  test_sim_controller.py  test_sim_queues.py  test_sim_runner.py  test_site_package_integration.py  test_websocket_server.py
world/: __init__.py  graph.py  world.py
world/generation/: __init__.py  generator.py  params.py
world/graph/: edge.py  graph.py  node.py
world/io/: __init__.py  map_manager.py  websocket_server.py
world/routing/: __init__.py  criteria.py  navigator.py
world/sim/: __init__.py  action_processor.py  action_registry.py  controller.py  queues.py  runner.py  state.py  utils.py
world/sim/actions/: __init__.py  action_parser.py  action_processor.py  action_registry.py
world/sim/dto/: __init__.py  agent_dto.py  delivery_dto.py  simulation_dto.py  statistics_dto.py  step_result_dto.py  truck_dto.py
world/sim/handlers/: __init__.py  agent.py  base.py  building.py  map.py  simulation.py  state.py  tick_rate.py
world/sim/signal_dtos/: __init__.py  base.py  map_created.py
(+30 files in other folders)
